--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -31,12 +31,12 @@
       fixedTopGap="56"
     >
       <mat-nav-list>
-        <a href="#" mat-list-item>Menu Item 1</a>
-        <a href="#" mat-list-item>Menu Item 2</a>
-        <a href="#" mat-list-item>Menu Item 3</a>
-        <a href="#" mat-list-item>Menu Item 4</a>
-        <a href="#" mat-list-item>Menu Item 5</a>
-        <a href="#" mat-list-item>Menu Item 6</a>
+        <a href="#" mat-list-item><p mat-line>Menu Item 2</p></a>
+        <a href="#" mat-list-item><p mat-line>Menu Item 3</p></a>
+        <a href="#" mat-list-item><p mat-line>Menu Item 1</p></a>
+        <a href="#" mat-list-item><p mat-line>Menu Item 4</p></a>
+        <a href="#" mat-list-item><p mat-line>Menu Item 5</p></a>
+        <a href="#" mat-list-item><p mat-line>Menu Item 6</p></a>
       </mat-nav-list>
     </mat-sidenav>
 
